...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
            android:layout_gravity="bottom"
            app:hideOnScroll="true"
            app:menu="@menu/menu_home"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_fab"
            app:srcCompat="@drawable/ic_add_white_24dp"
            app:layout_anchor="@id/bottom_app_bar"/>

...
